--- a/frontend/view/owner/review.html
+++ b/frontend/view/owner/review.html
@@ -60,21 +60,15 @@
     <script src="/js/owner/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
     <script src="/node_modules/fullcalendar/index.global.min.js"></script>
     <!-- Template Javascript -->
-    <script type="module" src="/js/owner/main.js"></script>
-    <script type="module" src="/js/owner/review.js"></script>
-
+     
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
   </head>
-
   <body>
-    <div
-      id="vueApp"
-      class="container-fluid position-relative bg-white d-flex p-0"
-    >
+    <div id="vueApp" class="container-xxl position-relative bg-white d-flex p-0">
       <!-- Spinner Start -->
       <spinner-component></spinner-component>
       <!-- Spinner End -->
@@ -86,73 +80,7 @@
       <!-- Content Start -->
       <div class="content">
         <!-- Navbar Start -->
-        <nav
-          class="navbar navbar-expand bg-light navbar-light sticky-top px-4 py-0"
-        >
-          <a href="index.html" class="navbar-brand d-flex d-lg-none me-4">
-            <h2 class="text-primary mb-0"><i class="fa fa-hashtag"></i></h2>
-          </a>
-          <a href="#" class="sidebar-toggler flex-shrink-0">
-            <i class="fa fa-bars"></i>
-          </a>
-
-          <div class="navbar-nav align-items-center ms-auto">
-            <div class="nav-item dropdown">
-              <a
-                href="#"
-                class="nav-link dropdown-toggle"
-                data-bs-toggle="dropdown"
-              >
-                <i class="fa fa-bell me-lg-2"></i>
-                <span class="d-none d-lg-inline-flex">알림</span>
-              </a>
-              <div
-                class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0"
-              >
-                <a href="#" class="dropdown-item">
-                  <h6 class="fw-normal mb-0">프로필 업데이트</h6>
-                  <small>15 minutes ago</small>
-                </a>
-                <hr class="dropdown-divider" />
-                <a href="#" class="dropdown-item">
-                  <h6 class="fw-normal mb-0">홍길북 님의 예약요청</h6>
-                  <small>15 minutes ago</small>
-                </a>
-                <hr class="dropdown-divider" />
-                <a href="#" class="dropdown-item">
-                  <h6 class="fw-normal mb-0">홍길순님이 예약을 취소했습니다</h6>
-                  <small>15 minutes ago</small>
-                </a>
-                <hr class="dropdown-divider" />
-                <a href="#" class="dropdown-item text-center"
-                  >모든 알림메세지 확인하기</a
-                >
-              </div>
-            </div>
-            <div class="nav-item dropdown">
-              <a
-                href="#"
-                class="nav-link dropdown-toggle"
-                data-bs-toggle="dropdown"
-              >
-                <img
-                  class="rounded-circle me-lg-2"
-                  src=""
-                  alt=""
-                  style="width: 40px; height: 40px"
-                />
-                <span class="d-none d-lg-inline-flex">사용자 이름</span>
-              </a>
-              <div
-                class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0"
-              >
-                <a href="#" class="dropdown-item">내 계정</a>
-                <a href="#" class="dropdown-item">세팅</a>
-                <a href="#" class="dropdown-item">로그아웃</a>
-              </div>
-            </div>
-          </div>
-        </nav>
+         <navbar-component></navbar-component>
         <!-- Navbar End -->
 
         <!-- Sale & Revenue Start -->
@@ -365,6 +293,7 @@
       </div>
       <!-- Content End -->
     </div>
+    
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"
@@ -385,6 +314,7 @@
     <script src="/js/owner/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
     <!-- Template Javascript -->
     <script type="module" src="/js/owner/main.js"></script>
+    <script type="module" src="/js/owner/review.js"></script>
     <script src="../../js/owner/component.js"></script>
   </body>
 </html>
